# MlOps

./: .gitignore  Dockerfile  Makefile  README.md  dvc.yaml  perf.py  pyproject.toml  setup.py  train.py
.dvc/: config
chebyshevDistance/: __init__.py
chebyshevDistance/python/: binding.cpp
chebyshevDistance/src/: chebyshev_distance.cpp  chebyshev_distance.h
chebyshevDistance/tests/: test_trace.cpp
configs/: config.yaml
configs/data/: data.yaml
configs/model/: model.yaml
data/: CIFAR10.dvc
lightning_modules/: data_module.py  model.py
